Fix missing border around add drug spinner

--- a/app/stylesheets/_search.scss
+++ b/app/stylesheets/_search.scss
@@ -75,6 +75,8 @@
     }
 
     & ~ .circle-wrapper {
+      border: 2px solid $text-color;
+      border-left: 0;
       background-color: $white;
     }
   }
